--- a/Prácticas/Introduccion_HTML/index.html
+++ b/Prácticas/Introduccion_HTML/index.html
@@ -12,7 +12,14 @@
 
     <h1>Usabilidad y Accesibilidad</h1>
 
-    <h2>Hugo Fernández Solís</h2>
+    <h2>Grupo 14</h2>
+
+    <ul>
+      <li>Diego Díaz Fernández - alu0101130026@ull.edu.es</li>
+      <li>Hugo Fernández Solís - alu0101112664@ull.edu.es</li>  
+      <li>Jacobo Labrador González - alu0101119663@ull.edu.es</li>
+      <li>Luciano Sekulic Gregoris - alu0101022239@ull.edu.es</li>
+    </ul>
 
     <hr>
 
