--- a/Prácticas/Introduccion_HTML/index.html
+++ b/Prácticas/Introduccion_HTML/index.html
@@ -28,13 +28,7 @@
     <p>EL objetivo de esta práctica es realizar un prototipo <strong>HTML</strong> utilizando todos los conceptos mostrados en el pdf <em>'Introducción a HTML'</em>.</p>
 
     <h3>Guión: </h3>
-    <a>
-      <href>https://campusingenieriaytecnologia.ull.es/mod/assign/view.php?id=288116</href>
-      <name>"ull"</name>
-      <rel>next</rel>
-      <rev>prev</rev>
-      <charset>UTF-8</charset>
-    </a>
+    <a href="https://campusingenieriaytecnologia.ull.es/mod/assign/view.php?id=288116">Tarea</a>
 
     <h3>Requisitos:</h3>
     <ol>
@@ -66,10 +60,15 @@
         <td>Celda 6</td>
       </tr>
     </table>
+    <br/><br/>
 
     <form> 
-      Tu nombre: <input/> 
-      Tu apellido: <input/> 
+      <form>
+        Usuario: <input type="text"/>  <br/><br/>
+        Contraseña: <input type="password"/>  <br/><br/>
+        Recordar nombre y contraseña <input type="checkbox"/> <br/><br/>
+        <input type="submit"> 
+        </form>
     </form>
 
   </body>
