--- a/Prácticas/Introduccion_HTML/index.html
+++ b/Prácticas/Introduccion_HTML/index.html
@@ -15,13 +15,6 @@
 
     <h2>Grupo 14</h2>
 
-    <ul>
-      <li>Diego Díaz Fernández - alu0101130026@ull.edu.es</li>
-      <li>Hugo Fernández Solís - alu0101112664@ull.edu.es</li>  
-      <li>Jacobo Labrador González - alu0101119663@ull.edu.es</li>
-      <li>Luciano Sekulic Gregoris - alu0101022239@ull.edu.es</li>
-    </ul>
-
     <hr>
 
     <h3>Objetivos: </h3>
@@ -50,14 +43,24 @@
 
     <table class="default">
       <tr>
-        <td>Celda 1</td>
-        <td>Celda 2</td>
-        <td>Celda 3</td>
+        <td>Diego Díaz Fernández</td>
+        <td>-</td>
+        <td>alu0101130026@ull.edu.es</td>
       </tr>
       <tr>
-        <td>Celda 4</td>
-        <td>Celda 5</td>
-        <td>Celda 6</td>
+        <td>Hugo Fernández Solís</td>
+        <td>-</td>
+        <td>alu0101112664@ull.edu.es</td>
+      </tr>
+      <tr>
+        <td>Jacobo Labrador González</td>
+        <td>-</td>
+        <td>alu0101119663@ull.edu.es</td>
+      </tr>
+      <tr>
+        <td>Luciano Sekulic Gregoris</td>
+        <td>-</td>
+        <td>alu0101022239@ull.edu.es</td>
       </tr>
     </table>
     <br/><br/>
