--- a/Prácticas/Introduccion_HTML/index.html
+++ b/Prácticas/Introduccion_HTML/index.html
@@ -4,32 +4,77 @@
 
   <head>
 
-    <title>MyWebsite</title>
+    <title>Time-Organizer</title>
 
   </head>
 
   <body>
-    <img src="ULL_Logo.jpg">
 
     <h1>Usabilidad y Accesibilidad</h1>
 
     <h2>Grupo 14</h2>
 
+    <table class="default">
+      <tr>
+        <td>Diego Díaz Fernández</td>
+        <td>alu0101130026@ull.edu.es</td>
+      </tr>
+      <tr>
+        <td>Hugo Fernández Solís</td>
+        <td>alu0101112664@ull.edu.es</td>
+      </tr>
+      <tr>
+        <td>Jacobo Labrador González</td>
+        <td>alu0101119663@ull.edu.es</td>
+      </tr>
+      <tr>
+        <td>Luciano Sekulic Gregoris</td>
+        <td>alu0101022239@ull.edu.es</td>
+      </tr>
+    </table>
+    <br/><br/>
+
     <hr>
 
-    <h3>Objetivos: </h3>
-    <p>EL objetivo de esta práctica es realizar un prototipo <strong>HTML</strong> utilizando todos los conceptos mostrados en el pdf <em>'Introducción a HTML'</em>.</p>
+    <h3>¡Bienvenid@! </h3>
+    <p>Bienvenidos a la web de <strong>“Time-Organizer”<strong>.
+Aquí podrás planear tu horario para maximizar tu rendimiento y obtener las mejores calificaciones. Te ayudaremos de distintas maneras desde consultar tu horario, hasta realizar entregas para tus próximos ejercicios.
 
-    <h3>Guión: </h3>
-    <a href="https://campusingenieriaytecnologia.ull.es/mod/assign/view.php?id=288116">Tarea</a>
 
-    <h3>Requisitos:</h3>
+
+
+
+
+
+    <h3>Enlace</h3>
+    <a href="https://campusingenieriaytecnologia.ull.es/mod/assign/view.php?id=288116%22%3ETarea</a>
+      <name>"ull"</name>
+      <rel>next</rel>
+      <rev>prev</rev>
+      <charset>UTF-8</charset>
+    </a>
+
+    <h3>Enlaces de interés:</h3>
     <ol>
-      <li>Leer el archivo de Introducción a HTML</li>
-      <li>Crear nuestro espacio de trabajo incluyendo un repositorio de GitHub</li>
-      <li>Crear un documento index.html</li>
-      <li>Subir el documento y el enlace al repositorio</li>
+      <li>Perfil</li>
+      <li>Calendario</li>
+      <li>Añadir tarea</li>
+      <li>Entregas pendientes</li>
+	<li>Entregas realizadas</li>
+	<li>Asignaturas</li>
+<li>Notas</li>
+<li>Profesores</li>
     </ol>
+
+	<h3>Registro</h3>
+	<form> 
+      <form>
+        Usuario: <input type="text"/>  <br/><br/>
+        Contraseña: <input type="password"/>  <br/><br/>
+        Recordar nombre y contraseña <input type="checkbox"/> <br/><br/>
+        <input type="submit"> 
+        </form>
+    </form>
 
     <h3>Requisitos cumplidos:</h3>
     <ul type="circle">
@@ -40,39 +85,6 @@
     </ul>
 
     <p>Este es el primer prototipo del proyecto sobre programación en <strong>HTTP</strong>.</p>
-
-    <table class="default">
-      <tr>
-        <td>Diego Díaz Fernández</td>
-        <td>-</td>
-        <td>alu0101130026@ull.edu.es</td>
-      </tr>
-      <tr>
-        <td>Hugo Fernández Solís</td>
-        <td>-</td>
-        <td>alu0101112664@ull.edu.es</td>
-      </tr>
-      <tr>
-        <td>Jacobo Labrador González</td>
-        <td>-</td>
-        <td>alu0101119663@ull.edu.es</td>
-      </tr>
-      <tr>
-        <td>Luciano Sekulic Gregoris</td>
-        <td>-</td>
-        <td>alu0101022239@ull.edu.es</td>
-      </tr>
-    </table>
-    <br/><br/>
-
-    <form> 
-      <form>
-        Usuario: <input type="text"/>  <br/><br/>
-        Contraseña: <input type="password"/>  <br/><br/>
-        Recordar nombre y contraseña <input type="checkbox"/> <br/><br/>
-        <input type="submit"> 
-        </form>
-    </form>
 
   </body>
 
