--- a/Prácticas/Introduccion_HTML/index.html
+++ b/Prácticas/Introduccion_HTML/index.html
@@ -38,7 +38,7 @@
 
     <h3>¡Bienvenid@! </h3>
     <p>Bienvenidos a la web de <strong>“Time-Organizer”<strong>.
-Aquí podrás planear tu horario para maximizar tu rendimiento y obtener las mejores calificaciones. Te ayudaremos de distintas maneras desde consultar tu horario, hasta realizar entregas para tus próximos ejercicios.
+Aquí podrás planear tu horario para maximizar tu rendimiento y obtener las mejores calificaciones. Te ayudaremos de distintas maneras desde consultar tu horario, hasta realizar entregas para tus próximos ejercicios.<p>
 
 
 
