--- a/Prácticas/Introduccion_HTML/index.html
+++ b/Prácticas/Introduccion_HTML/index.html
@@ -10,6 +10,8 @@
 
   <body>
 
+    <img src="ULL_Logo.jpg">
+
     <h1>Usabilidad y Accesibilidad</h1>
 
     <h2>Grupo 14</h2>
@@ -42,17 +44,8 @@ Aquí podrás planear tu horario para maximizar tu rendimiento y obtener las mej
 
 
 
-
-
-
-
     <h3>Enlace</h3>
-    <a href="https://campusingenieriaytecnologia.ull.es/mod/assign/view.php?id=288116%22%3ETarea</a>
-      <name>"ull"</name>
-      <rel>next</rel>
-      <rev>prev</rev>
-      <charset>UTF-8</charset>
-    </a>
+    <a href="https://campusingenieriaytecnologia.ull.es/mod/assign/view.php?id=288116%22%3ETarea">Estamos en Facebook</a>
 
     <h3>Enlaces de interés:</h3>
     <ol>
@@ -60,10 +53,10 @@ Aquí podrás planear tu horario para maximizar tu rendimiento y obtener las mej
       <li>Calendario</li>
       <li>Añadir tarea</li>
       <li>Entregas pendientes</li>
-	<li>Entregas realizadas</li>
-	<li>Asignaturas</li>
-<li>Notas</li>
-<li>Profesores</li>
+      <li>Entregas realizadas</li>
+      <li>Asignaturas</li>
+      <li>Notas</li>
+      <li>Profesores</li>
     </ol>
 
 	<h3>Registro</h3>
@@ -75,7 +68,6 @@ Aquí podrás planear tu horario para maximizar tu rendimiento y obtener las mej
         <input type="submit"> 
         </form>
     </form>
-
 
     <p>Este es el primer prototipo del proyecto sobre programación en <strong>HTTP</strong>.</p>
 
