--- a/Prácticas/Introduccion_HTML/index.html
+++ b/Prácticas/Introduccion_HTML/index.html
@@ -39,13 +39,13 @@
     <hr>
 
     <h3>¡Bienvenid@! </h3>
-    <p>Bienvenidos a la web de <strong>“Time-Organizer”<strong>.
+    <p>Bienvenidos a la web de <strong>“Time-Organizer”</strong>.</p>
 Aquí podrás planear tu horario para maximizar tu rendimiento y obtener las mejores calificaciones. Te ayudaremos de distintas maneras desde consultar tu horario, hasta realizar entregas para tus próximos ejercicios.<p>
 
 
 
     <h3>Enlace</h3>
-    <a href="https://campusingenieriaytecnologia.ull.es/mod/assign/view.php?id=288116%22%3ETarea">Estamos en Facebook</a>
+    <a href="https://campusingenieriaytecnologia.ull.es/mod/assign/view.php?id=288116%22%3ETarea">Tarea</a>
 
     <h3>Enlaces de interés:</h3>
     <ol>
